--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,11 @@
             height: 100vh;
         }
 
-        .left, .right {
-            width: 50%;
+        .right {
+            width: 100%;
             padding: 20px;
         }
 
-        .form-control {
-            width: 100%;
-        }
 
         .centered-content {
             display: flex;
@@ -32,37 +29,6 @@
 </head>
 <body>
 <div class="split-container">
-    <div class="left">
-        <h2>Set Cookies</h2>
-        <form action="/set-cookies" method="post" class="mb-4">
-            <div class="form-group">
-                <label for="phpsessid">PHPSESSID</label>
-                <input type="text" class="form-control" id="phpsessid" name="phpsessid" required>
-            </div>
-            <div class="form-group">
-                <label for="fbc">_fbc</label>
-                <input type="text" class="form-control" id="fbc" name="fbc" required>
-            </div>
-            <div class="form-group">
-                <label for="fbp">_fbp</label>
-                <input type="text" class="form-control" id="fbp" name="fbp" required>
-            </div>
-            <div class="form-group">
-                <label for="ga">_ga</label>
-                <input type="text" class="form-control" id="ga" name="ga" required>
-            </div>
-            <div class="form-group">
-                <label for="ga_7zv1ygsdy0">_ga_7ZV1YGSDY0</label>
-                <input type="text" class="form-control" id="ga_7zv1ygsdy0" name="ga_7zv1ygsdy0" required>
-            </div>
-            <div class="form-group">
-                <label for="ga_7zv1ygsdy0_key">ga_7zv1ygsdy0_key</label>
-                <input type="text" class="form-control" id="ga_7zv1ygsdy0_key" name="ga_7zv1ygsdy0_key" required>
-            </div>
-
-            <button type="submit" class="btn btn-primary btn-block">Set Cookies</button>
-        </form>
-    </div>
     <div class="right centered-content">
         <h2>Run Code</h2>
         <div id="status" class="mb-4"></div>
@@ -80,19 +46,11 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
-    // Fetch the current status from the server
     fetch('/status')
         .then(response => response.json())
         .then(data => {
             const statusDiv = document.getElementById('status');
-            statusDiv.innerHTML = `<h4>Status: ${data.running ? 'Running' : 'Stopped'}</h4>
-<code>cookies: <ul>
-<li>${data.cookies.PHPSESSID}</li>
-<li>${data.cookies._fbc}</li>
-<li>${data.cookies._fbp}</li>
-<li>${data.cookies._ga}</li>
-<li>${data.cookies.ga_7zv1ygsdy0_key}</li>
-</ul></code>`;
+            statusDiv.innerHTML = `<h4>Status: ${data.running ? 'Running' : 'Stopped'}</h4>`;
         });
 </script>
 </body>
